--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  height: 100%;
+  min-height: 100vh;
   background: linear-gradient(
       to bottom,
       transparent,
