--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,3 +39,56 @@ body {
 .input {
   margin-bottom: 20px;
 }
+
+.contenedor {
+	max-width: 960px;
+  min-height: 100vh;
+	margin: 0 auto;
+	padding: 40px;
+	background-color: #fff;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.left-container {
+}
+
+h1 {
+	font-size: 36px;
+	margin-bottom: 20px;
+}
+
+.poster {
+	width: 300px;
+	height: 600px;
+	margin-right: 20px;
+}
+
+.poster img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px;
+}
+
+.informacion {
+	overflow: hidden;
+}
+
+.informacion p {
+	margin-bottom: 10px;
+}
+
+svg {
+  display: inline;
+}
+@media (max-width: 719px) {
+  .contenedor {
+    flex-direction: column;
+    gap: 40px;
+    overflow-y: scroll!important;
+  }
+}
